Correción de meta

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Portafolio CV - Alex Andres</title>
     <meta name="description" content="Hola bienvenido a mi Portafolio Profesional">
-    <link rel="canonical" href="">
+    <link rel="canonical" href="https://alex831612.github.io/portafolio-cv/">
     <link rel="icon" href="assets/programador.png">
     <link rel="apple-touch-icon" href="assets/programador.png">
     <meta name="theme-color" content="#052659">
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Portafolio CV - Alex Andres">
     <meta property="og:description" content="Hola bienvenido a mi Portafolio Profesional">
     <meta property="og:image" content="assets/programador.png">
-    <meta property="og:url" content=" ">
+    <meta property="og:url" content="https://alex831612.github.io/portafolio-cv/">
 </head>
 
 <body>
